--- a/index.html
+++ b/index.html
@@ -40,15 +40,64 @@
         gap: 1rem;
       }
 
-      .card {
-        border: 1px solid #e1e4e8;
-        border-radius: 0.5rem;
-        padding: 1rem;
-        background: #fff;
-        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-        text-align: center;
-      }
+.card {
+  background-color: #ffffff;
+  border-radius: 1rem;
+  padding: 1.5rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: none;
+  
+}
 
+.card:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+}
+
+.card img {
+  max-width: 120px;
+  height: auto;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+}
+
+.card h3 {
+  font-size: 1.4rem;
+  margin: 0.5rem 0;
+  color: #2c3e50;
+}
+
+.card ul {
+  padding: 0;
+  margin: 0.5rem 0 1rem;
+  list-style: none;
+  display: flex;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card ul li {
+  background-color: #f1f1f1;
+  padding: 0.3rem 0.75rem;
+  border-radius: 999px;
+  font-size: 0.85rem;
+  color: #333;
+}
+
+.card p {
+  margin: 0.4rem 0;
+  font-size: 0.95rem;
+  color: #555;
+}
+
+.card p strong {
+  color: #000;
+}
       .card img {
         width: 100%;
         height: auto;
@@ -66,6 +115,30 @@
         margin: 0.3rem 0;
         font-size: 0.95rem;
       }
+
+      .details {
+        width: 50vw;
+      }
+
+      .details img {
+        width: 30vw;
+      }
+
+      .btn {
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: #ffca28;
+  color: #000;
+  font-weight: 600;
+  cursor: pointer;
+  margin-top: 1rem;
+  transition: background-color 0.2s ease;
+}
+
+.btn:hover {
+  background-color: #f4b400;
+}
 
       @media (max-width: 768px) {
         .grid-container {
@@ -87,27 +160,46 @@
         <div>
           <input v-model="search" type="text" placeholder="Filtrar por nombre..." id="filterPokemon" />
         </div>
-
-        <div class="grid-container">
+        <!-- Lista de pokemons -->
+        <div v-if="!selectedPokemon" class="grid-container">
           <div v-for="pokemon in filterPokemons" :key="pokemon.id" class="card">
-            <div v-if="">
+            <div @click="selectedPokemon=pokemon">
               <img :src="pokemon.sprite" :alt="pokemon.name" />
+              <p>ID /{{pokemon._id}}</p>
             </div>
-            <div>
+            <div class="card">
               <h3>{{ pokemon.name }}</h3>
               <ul>
-                <li v-for="(tipo, index) in pokemon.type" :key="index" style="list-style-type: none; ">
-                    {{tipo}}
-                </li>
+                <li v-for="(tipo, index) in pokemon.type" :key="index" style="list-style-type: none">{{tipo}}</li>
               </ul>
-              
-              <p>
-                <strong>Evoluciona de:</strong>
-                <span>{{ pokemon.evolvesFrom }}</span>
+
+              <p v-if="pokemon.evolves_from_species">
+                <strong>Evoluciona de: </strong>
+                <span>{{ pokemon.evolves_from_species }}</span>
               </p>
             </div>
           </div>
         </div>
+        <!-- Details de pokemon -->
+        <div v-else>
+          <div class="card details">
+            <div>
+              <img :src="selectedPokemon.sprite" :alt="selectedPokemon.name" />
+              <p>ID /{{selectedPokemon._id}}</p>
+            </div>
+            <div class="card">
+              <h3>{{ selectedPokemon.name }}</h3>
+              <ul>
+                <li v-for="(tipo, index) in selectedPokemon.type" :key="index" style="list-style-type: none">{{tipo}}</li>
+              </ul>
+
+              <p v-if="selectedPokemon.evolves_from_species">
+                <strong>Evoluciona de: </strong>
+                <span>{{ selectedPokemon.evolves_from_species }}</span>
+              </p>
+            </div>
+            <div class="btn" @click="selectedPokemon= null">Back</div>
+          </div>
       </main>
     </div>
 
@@ -118,7 +210,7 @@
         setup() {
           const pokemons = ref([]);
           const search = ref("");
-          const selectedPokemon = ref(null)
+          const selectedPokemon = ref(null);
 
           onMounted(() => {
             getInfo();
@@ -126,9 +218,7 @@
 
           const getInfo = async () => {
             try {
-              const jsonURL = "./data/pokemon.json";
-              const response = await fetch(jsonURL);
-
+              const response = await fetch("https://pokemon-server-3a2p.onrender.com/api/pokemons");
               if (!response.ok) {
                 throw new Error(`Error en la API: ${response.status}`);
               }
@@ -142,7 +232,7 @@
 
           const filterPokemons = computed(() => {
             if (search.value) {
-              return pokemons.value.filter(pokemon => pokemon.name.toLowerCase().includes(search.value.toLowerCase()));
+              return pokemons.value.filter((pokemon) => pokemon.name.toLowerCase().includes(search.value.toLowerCase()));
             }
             return pokemons.value;
           });
@@ -152,6 +242,7 @@
             pokemons,
             filterPokemons,
             search,
+            selectedPokemon,
           };
         },
       }).mount("#app");
