--- a/index.html
+++ b/index.html
@@ -4,154 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokemon Api con Vue</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #fff176; /* Fondo amarillo */
-        color: #333;
-      }
-
-      .container {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 2rem;
-      }
-
-      h1 {
-        text-align: center;
-        margin-bottom: 2rem;
-      }
-
-      input[type="text"] {
-        width: 100%;
-        padding: 0.75rem;
-        font-size: 1rem;
-        border: 1px solid #ccc;
-        border-radius: 0.5rem;
-        margin-bottom: 1.5rem;
-        box-sizing: border-box;
-      }
-
-      .grid-container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 1rem;
-      }
-
-.card {
-  background-color: #ffffff;
-  border-radius: 1rem;
-  padding: 1.5rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: none;
-  
-}
-
-.card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
-}
-
-.card img {
-  max-width: 120px;
-  height: auto;
-  margin-bottom: 1rem;
-  border-radius: 0.5rem;
-}
-
-.card h3 {
-  font-size: 1.4rem;
-  margin: 0.5rem 0;
-  color: #2c3e50;
-}
-
-.card ul {
-  padding: 0;
-  margin: 0.5rem 0 1rem;
-  list-style: none;
-  display: flex;
-  gap: 0.5rem;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.card ul li {
-  background-color: #f1f1f1;
-  padding: 0.3rem 0.75rem;
-  border-radius: 999px;
-  font-size: 0.85rem;
-  color: #333;
-}
-
-.card p {
-  margin: 0.4rem 0;
-  font-size: 0.95rem;
-  color: #555;
-}
-
-.card p strong {
-  color: #000;
-}
-      .card img {
-        width: 100%;
-        height: auto;
-        max-width: 150px;
-        margin: 0 auto 1rem;
-        display: block;
-      }
-
-      h3 {
-        margin: 0.5rem 0;
-        font-size: 1.2rem;
-      }
-
-      p {
-        margin: 0.3rem 0;
-        font-size: 0.95rem;
-      }
-
-      .details {
-        width: 50vw;
-      }
-
-      .details img {
-        width: 30vw;
-      }
-
-      .btn {
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  border: none;
-  background-color: #ffca28;
-  color: #000;
-  font-weight: 600;
-  cursor: pointer;
-  margin-top: 1rem;
-  transition: background-color 0.2s ease;
-}
-
-.btn:hover {
-  background-color: #f4b400;
-}
-
-      @media (max-width: 768px) {
-        .grid-container {
-          grid-template-columns: repeat(2, 1fr);
-        }
-      }
-
-      @media (max-width: 576px) {
-        .grid-container {
-          grid-template-columns: 1fr;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container" id="app">
@@ -160,6 +13,7 @@
         <div>
           <input v-model="search" type="text" placeholder="Filtrar por nombre..." id="filterPokemon" />
         </div>
+
         <!-- Lista de pokemons -->
         <div v-if="!selectedPokemon" class="grid-container">
           <div v-for="pokemon in filterPokemons" :key="pokemon.id" class="card">
@@ -170,9 +24,8 @@
             <div class="card">
               <h3>{{ pokemon.name }}</h3>
               <ul>
-                <li v-for="(tipo, index) in pokemon.type" :key="index" style="list-style-type: none">{{tipo}}</li>
+                <li v-for="(tipo, index) in pokemon.type" :key="index">{{tipo}}</li>
               </ul>
-
               <p v-if="pokemon.evolves_from_species">
                 <strong>Evoluciona de: </strong>
                 <span>{{ pokemon.evolves_from_species }}</span>
@@ -180,72 +33,26 @@
             </div>
           </div>
         </div>
-        <!-- Details de pokemon -->
-        <div v-else>
-          <div class="card details">
-            <div>
-              <img :src="selectedPokemon.sprite" :alt="selectedPokemon.name" />
-              <p>ID /{{selectedPokemon._id}}</p>
-            </div>
-            <div class="card">
-              <h3>{{ selectedPokemon.name }}</h3>
-              <ul>
-                <li v-for="(tipo, index) in selectedPokemon.type" :key="index" style="list-style-type: none">{{tipo}}</li>
-              </ul>
 
-              <p v-if="selectedPokemon.evolves_from_species">
-                <strong>Evoluciona de: </strong>
-                <span>{{ selectedPokemon.evolves_from_species }}</span>
-              </p>
-            </div>
+        <!-- Detalles del Pokémon -->
+        <div v-else class="details-wrapper">
+          <div class="card details">
+            <img :src="selectedPokemon.sprite" :alt="selectedPokemon.name" />
+            <p>ID /{{selectedPokemon._id}}</p>
+            <h3>{{ selectedPokemon.name }}</h3>
+            <ul>
+              <li v-for="(tipo, index) in selectedPokemon.type" :key="index">{{tipo}}</li>
+            </ul>
+            <p v-if="selectedPokemon.evolves_from_species">
+              <strong>Evoluciona de: </strong>
+              <span>{{ selectedPokemon.evolves_from_species }}</span>
+            </p>
             <div class="btn" @click="selectedPokemon= null">Back</div>
           </div>
+        </div>
       </main>
     </div>
 
-    <script type="module">
-      import { createApp, ref, onMounted, computed } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
-
-      createApp({
-        setup() {
-          const pokemons = ref([]);
-          const search = ref("");
-          const selectedPokemon = ref(null);
-
-          onMounted(() => {
-            getInfo();
-          });
-
-          const getInfo = async () => {
-            try {
-              const response = await fetch("https://pokemon-server-3a2p.onrender.com/api/pokemons");
-              if (!response.ok) {
-                throw new Error(`Error en la API: ${response.status}`);
-              }
-              const data = await response.json();
-              pokemons.value = data;
-              console.log(data);
-            } catch (error) {
-              console.error("Error al obtener los países:", error);
-            }
-          };
-
-          const filterPokemons = computed(() => {
-            if (search.value) {
-              return pokemons.value.filter((pokemon) => pokemon.name.toLowerCase().includes(search.value.toLowerCase()));
-            }
-            return pokemons.value;
-          });
-
-          return {
-            getInfo,
-            pokemons,
-            filterPokemons,
-            search,
-            selectedPokemon,
-          };
-        },
-      }).mount("#app");
-    </script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
